responsive adjustment for large monitors

--- a/architecture/index.html
+++ b/architecture/index.html
@@ -116,7 +116,6 @@
   <!--body-->
 
   <div class="blank-lineheight-xl"></div>
-
   <div class="body-landing">
     <div class="body-intro">
       <div class="t-hello" id="t-hello-1550">HELLO, </div>
@@ -128,14 +127,41 @@
       <p class="divider"></p>
       <div class="body-v">
         <div class="body-intro">
-          <span class="t-me">selected academic projects
-          </span>
+          <span class="t-me">architecture</span>
+          <span class="divider1"></span>
+          <span class="t-me"> design</span>
+
         </div>
+        <div class="t-me t-me-1">
+          selected academic projects </div>
+      </div>
+    </div>
+
+    <div class="t-intro z-index-top" data-aos="fade-up">
+      Most of the projects are from my three-year Master of Architecture program. Our main focuses
+      were Design Theories, Methods, and Practices. Projects emphasize the major format, spatial,
+      material, tectonic, social, technological, and environmental determinants of building form.
+      the penultimate studio incorporate integrative thinking that shapes complex architectural
+      design and technical solutions based on design research and studio requirements.</div>
+  </div>
+
+  <div class="body-landing">
+    <div class="body-intro">
+      <div class="t-hello" id="t-hello-1550">HELLO, </div>
+    </div>
+    <div class="body-intro" data-aos="fade-up">
+      <div class="column">
+        <div class="t-hi">I'm Vicky.</div>
+      </div>
+      <p class="divider"></p>
+      <div class="column alignCPH">
+        <span class="t-me t-me-1">selected academic projects
+        </span>
 
         <div class="row">
           <span class="t-me"> architecture </span>
           <span class="divider1"></span>
-          <div class="t-me t-me-1"> design </div>
+          <div class="t-me"> design </div>
         </div>
 
       </div>
@@ -203,7 +229,7 @@
       <div class="vertical-line-blank">
       </div>
       <div class="body-right body-img float">
-        <a href="./narrow_stripes/"> <img  class="shadowAll" src="./ar_02.jpg"> </a>
+        <a href="./narrow_stripes/"> <img class="shadowAll" src="./ar_02.jpg"> </a>
       </div>
     </div>
   </div>
@@ -213,7 +239,7 @@
   <div id="ytrigger-arch3">
     <div class="body-h">
       <div class="body-left body-img float">
-        <a href="./thesis_studio/"><img  class="shadowAll" src="./ar_07.jpg"></a>
+        <a href="./thesis_studio/"><img class="shadowAll" src="./ar_07.jpg"></a>
 
       </div>
       <div class="vertical-line-blank">
@@ -247,7 +273,7 @@
     <div class="vertical-line-blank">
     </div>
     <div class="body-right body-img float">
-      <a class="t-title" href="./manifold_ground/"> <img  class="shadowAll" src="./ar_04.jpg"></a>
+      <a class="t-title" href="./manifold_ground/"> <img class="shadowAll" src="./ar_04.jpg"></a>
     </div>
   </div>
   <!--MANIFOLD GROUND -->
@@ -257,7 +283,8 @@
   <div id="ytrigger-arch5">
     <div class="body-h">
       <div class="body-left body-img float">
-        <a class="t-title" href="./recovery_of_river_edges/"> <img  class="shadowAll" src="./ar_03.jpg"></a>
+        <a class="t-title" href="./recovery_of_river_edges/"> <img class="shadowAll"
+            src="./ar_03.jpg"></a>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -291,7 +318,8 @@
       <div class="vertical-line-blank">
       </div>
       <div class="body-right body-img float">
-        <a class="t-title-l" href="./the_rotation_of_curves/"> <img  class="shadowAll" src="./ar_05.jpg"></a>
+        <a class="t-title-l" href="./the_rotation_of_curves/"> <img class="shadowAll"
+            src="./ar_05.jpg"></a>
       </div>
     </div>
   </div>
@@ -301,7 +329,7 @@
   <div id="ytrigger-arch7">
     <div class="body-h">
       <div class="body-left body-img float">
-        <a class="t-title-l" href="./LACAMA/"> <img  class="shadowAll" src="./ar_08.jpg"></a>
+        <a class="t-title-l" href="./LACAMA/"> <img class="shadowAll" src="./ar_08.jpg"></a>
       </div>
       <div class="vertical-line-blank">
       </div>
@@ -343,7 +371,7 @@
   <div class="blank-lineheight-xl"></div>
 
 
-  <p class="tTQ center-h" data-aos="fade-up">Thanks for your time and have a good day!  </p>
+  <p class="tTQ center-h" data-aos="fade-up">Thanks for your time and have a good day! </p>
   <p class="t-text-m center-h" data-aos="fade-up">please email me for professional projects</p>
   <div class="blank-lineheight-s"></div>
 
