--- a/photography/index.html
+++ b/photography/index.html
@@ -113,212 +113,183 @@ Interested in what you see? Shoot me an email :) " />
   </div>
   <!--head-->
   <!--body-->
-    <div class="blank-lineheight-xl"></div>
+  <div class="blank-lineheight-xl"></div>
 
-    <div class="body-landing">
-      <div class="body-intro">
-        <div class="t-hello" id="t-hello-1550">HELLO, </div>
-      </div>
-      <div class="body-intro" data-aos="fade-up">
-        <div class="body-v">
-          <div class="t-hi" >I'm Vicky.</div>
-        </div>
-        <p class="divider"></p>
-        <div class="body-v">
-          <div class="body-intro">
-            <span class="t-me">photography</span>
-            <span class="divider1"></span>
-            <span class="t-me" > nature observation</span>
-          </div>
-          <div class="t-me t-me-1">
-            is one of my favorite hobby.          </div>
-        </div>
-      </div>
-      <p class="t-intro z-index-top">
-        I love to recompose the nature form with a camera. Observing the narrative of nature
-        components with my perspective. </p>
+  <div class="body-landing">
+    <div class="body-intro">
+      <div class="t-hello" id="t-hello-1550">HELLO, </div>
     </div>
+    <div class="body-intro" data-aos="fade-up">
+      <div class="body-v">
+        <div class="t-hi">I'm Vicky.</div>
+      </div>
+      <p class="divider"></p>
+      <div class="body-v">
+        <div class="body-intro">
+          <span class="t-me">photography</span>
+          <span class="divider1"></span>
+          <span class="t-me"> observation</span>
 
-
-
-
-
-
-
-
-    <div class="body-h">
-      <p class="vertical-line ver1"></p>
-    </div>
-
-    <!--Photo 1-->
-    <div id="ytrigger-pg">
-      <div class="body-h">
-        <div class="body-left body-img float">
-          <img class="shadowAll" src="./01.jpg">
         </div>
-        <div class="vertical-line-blank">
-        </div>
-        <div class="body-right body-txt">
-          <p class="t-title-l">Bosque Del Apache National Wildlife Refuge</p>
-          <p class="horizontal-line"></p>
-          <p class="t-text-m">December, 2019</p>
-          <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
-        </div>
+        <div class="t-me t-me-1">
+          Selected recent photographs </div>
       </div>
     </div>
 
-    <!--Photo 1-->
-    <div class="blankHXL"></div>
+    <div class="t-intro z-index-top" data-aos="fade-up">
+      Always got inspiration from nature. I love to recompose the nature form with my camera in 2
+      dimensions. Observing the narrative of natural components within a certain perspective.</div>
+  </div>
 
-    <!--Photo 2-->
-    <div id="ytrigger-pg2">
+  <div class="body-h">
+    <p class="vertical-line ver1"></p>
+  </div>
 
-      <div class="body-h">
-        <div class="body-left body-txt">
-          <p class="t-title-l">Bosque Del Apache National Wildlife Refuge</p>
-          <p class="horizontal-line"></p>
-          <p class="t-text-m">December, 2019</p>
-          <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
-        </div>
-
-        <div class="vertical-line-blank">
-        </div>
-        <div class="body-right body-img float">
-          <img class="shadowAll" src="./02.jpg">
-        </div>
+  <!--Photo 1-->
+  <div id="ytrigger-pg">
+    <div class="row-change marginAll center-h center-v">
+      <img class="float shadowAll" src="./01.jpg">
+      <div class="vertical-line-blank">
       </div>
-
-    </div>
-    <!--Photo 2-->
-    <div class="blankHXL"></div>
-
-    <!--Photo 3-->
-    <div id="ytrigger-pg3">
-      <div class="body-h" >
-        <div class="body-left body-img float">
-          <img class="shadowAll" src="./03.jpg">
-
-        </div>
-        <div class="vertical-line-blank">
-        </div>
-        <div class="body-right body-txt">
-          <p class="t-title-l">Bosque Del Apache National Wildlife Refuge</p>
-          <p class="horizontal-line"></p>
-          <p class="t-text-m">December, 2019</p>
-          <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
-        </div>
-      </div>
-
-    </div>
-    <!--Photo 3-->
-    <div class="blankHXL"></div>
-
-    <!--Photo 4-->
-    <div>
-
-      <div class="body-h" id="ytrigger-pg4">
-
-        <div class="body-left body-txt">
-          <p href="/Photography" class="t-title-l">Sacramento National Wildlife Refuge</p>
-          <p class="horizontal-line"></p>
-          <p class="t-text-m">December, 2019</p>
-          <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
-        </div>
-
-        <div class="vertical-line-blank">
-        </div>
-        <div class="body-right body-img float">
-          <img class="shadowAll" src="./04.jpg">
-
-        </div>
+      <div class="column widthM">
+        <p class="t-title-l">Bosque Del Apache National Wildlife Refuge</p>
+        <p class="horizontal-line"></p>
+        <p class="t-text-m">December, 2019</p>
+        <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
     </div>
+  </div>
+  <!--Photo 1-->
+  <div class="blankHXL"></div>
 
-    <!--Photo 4-->
-    <div class="blankHXL"></div>
+  <!--Photo 2-->
 
-    <!--Photo 5-->
-    <div >
-      <div class="body-h" id="ytrigger-pg5">
-        <div class="body-left body-img float">
-          <img class="shadowAll" src="./05.jpg">
 
-        </div>
-        <div class="vertical-line-blank">
-        </div>
-        <div class="body-right body-txt">
-          <p href="/Photography" class="t-title-l">Sacramento National Wildlife Refuge</p>
-          <p class="horizontal-line"></p>
-          <p class="t-text-m">December, 2019</p>
-          <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
-        </div>
+  <div id="ytrigger-pg2">
+    <div class="row-change marginAll center-h center-v row-changeRV">
+
+      <div class="column widthM">
+        <p class="t-title-l">Bosque Del Apache National Wildlife Refuge</p>
+        <p class="horizontal-line"></p>
+        <p class="t-text-m">December, 2019</p>
+        <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
-
+      <div class="vertical-line-blank">
+      </div>
+      <img class="float shadowAll" src="./02.jpg">
     </div>
-    <!--Photo 5-->
-    <div class="blankHXL"></div>
 
-    <!--Photo 6-->
-    <div id="ytrigger-pg6">
 
-      <div class="body-h">
-        <div class="body-left body-txt">
-          <p class="t-title-l">Sacramento National Wildlife Refuge</p>
-          <p class="horizontal-line"></p>
-          <p class="t-text-m">December, 2019</p>
-          <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
-        </div>
+  </div>
+  <!--Photo 2-->
+  <div class="blankHXL"></div>
 
-        <div class="vertical-line-blank">
-        </div>
-        <div class="body-right body-img float">
-          <img class="shadowAll" src="./06.jpg">
-        </div>
-
+  <!--Photo 3-->
+  <div id="ytrigger-pg3">
+    <div class="row-change marginAll center-h center-v">
+      <img class="float shadowAll" src="./03.jpg">
+      <div class="vertical-line-blank">
+      </div>
+      <div class="column widthM">
+        <p class="t-title-l">Bosque Del Apache National Wildlife Refuge</p>
+        <p class="horizontal-line"></p>
+        <p class="t-text-m">December, 2019</p>
+        <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
     </div>
-    <!--Photo 6-->
-    <div class="blankHXL"></div>
+  </div>
+  <!--Photo 3-->
+  <div class="blankHXL"></div>
 
-    <!--Photo 7-->
-    <div id="ytrigger-pg7">
-      <div class="body-h">
-        <div class="body-left body-img float">
-          <img class="shadowAll" src="./07.jpg">
+  <!--Photo 4-->
 
-        </div>
-        <div class="vertical-line-blank">
-        </div>
-        <div class="body-right body-txt">
-          <p class="t-title-l">Teton National Park </p>
-          <p class="horizontal-line"></p>
-          <p class="t-text-m">September, 2020</p>
-          <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
-        </div>
+  <div id="ytrigger-pg4">
+
+    <div class="row-change marginAll center-h center-v row-changeRV">
+
+      <div class="column widthM">
+        <p href="/Photography" class="t-title-l">Sacramento National Wildlife Refuge</p>
+        <p class="horizontal-line"></p>
+        <p class="t-text-m">December, 2019</p>
+        <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+      </div>
+      <div class="vertical-line-blank">
+      </div>
+      <img class="float shadowAll" src="./04.jpg">
+    </div>
+
+  </div>
+
+  <!--Photo 4-->
+  <div class="blankHXL"></div>
+
+  <!--Photo 5-->
+  <div id="ytrigger-pg5">
+
+    <div class="row-change marginAll center-h center-v">
+      <img class="float shadowAll" src="./05.jpg">
+      <div class="vertical-line-blank">
+      </div>
+      <div class="column widthM">
+        <p href="/Photography" class="t-title-l">Sacramento National Wildlife Refuge</p>
+        <p class="horizontal-line"></p>
+        <p class="t-text-m">December, 2019</p>
+        <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
     </div>
+  </div>
+  <!--Photo 5-->
+  <div class="blankHXL"></div>
+
+  <!--Photo 6-->
+  <div id="ytrigger-pg6">
+    <div class="row-change marginAll center-h center-v row-changeRV">
+
+      <div class="column widthM">
+        <p href="/Photography" class="t-title-l">Sacramento National Wildlife Refuge</p>
+        <p class="horizontal-line"></p>
+        <p class="t-text-m">December, 2019</p>
+        <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+      </div>
+      <div class="vertical-line-blank">
+      </div>
+      <img class="float shadowAll" src="./06.jpg">
+    </div>
+  </div>
+  <!--Photo 6-->
+  <div class="blankHXL"></div>
+
+  <!--Photo 7-->
+  <div id="ytrigger-pg7">
+    <div class="row-change marginAll center-h center-v">
+      <img class="float shadowAll" src="./07.jpg">
+      <div class="vertical-line-blank">
+      </div>
+      <div class="column widthM">
+        <p class="t-title-l">Teton National Park </p>
+        <p class="horizontal-line"></p>
+        <p class="t-text-m">September, 2020</p>
+        <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+      </div>
+    </div>
+  </div>
 
   <!--Photo 7-->
   <div class="blankHXL"></div>
 
   <!--Photo 8-->
   <div id="ytrigger-pg8">
+    <div class="row-change marginAll center-h center-v row-changeRV">
 
-    <div class="body-h">
-
-      <div class="body-left body-txt">
+      <div class="column widthM">
         <p class="t-title-l">White Sands National Monument</p>
         <p class="horizontal-line"></p>
         <p class="t-text-m">December, 2019</p>
         <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
-
       <div class="vertical-line-blank">
       </div>
-      <div class="body-right body-img float">
-        <img class="shadowAll" src="./08.jpg">
-      </div>
-
+      <img class="float shadowAll" src="./08.jpg">
     </div>
   </div>
   <!--Photo 8-->
@@ -327,14 +298,11 @@ Interested in what you see? Shoot me an email :) " />
   <!--Photo 9-->
   <div id="ytrigger-pg9">
 
-    <div class="body-h">
-      <div class="body-left body-img float">
-        <img class="shadowAll" src="./09.jpg">
-
-      </div>
+    <div class="row-change marginAll center-h center-v">
+      <img class="float shadowAll" src="./09.jpg">
       <div class="vertical-line-blank">
       </div>
-      <div class="body-right body-txt">
+      <div class="column widthM">
         <p class="t-title-l">White Sands National Monument</p>
         <p class="horizontal-line"></p>
         <p class="t-text-m">December, 2019</p>
@@ -347,22 +315,17 @@ Interested in what you see? Shoot me an email :) " />
 
   <!--Photo 10-->
   <div id="ytrigger-pg10">
+    <div class="row-change marginAll center-h center-v row-changeRV">
 
-    <div class="body-h">
-
-      <div class="body-left body-txt">
+      <div class="column widthM">
         <p class="t-title-l">White Sands National Monument</p>
         <p class="horizontal-line"></p>
         <p class="t-text-m">December, 2019</p>
         <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
-
       <div class="vertical-line-blank">
       </div>
-      <div class="body-right body-img float">
-        <img class="shadowAll" src="./10.jpg">
-
-      </div>
+      <img class="float shadowAll" src="./10.jpg">
     </div>
   </div>
   <!--Photo 10-->
@@ -370,16 +333,12 @@ Interested in what you see? Shoot me an email :) " />
 
   <!--Photo 11-->
   <div id="ytrigger-pg11">
-
-    <div class="body-h">
-      <div class="body-left body-img float">
-        <img class="shadowAll" src="./11.jpg">
-
-      </div>
+    <div class="row-change marginAll center-h center-v">
+      <img class="float shadowAll" src="./11.jpg">
       <div class="vertical-line-blank">
       </div>
-      <div class="body-right body-txt">
-        <p class="t-title-l">White Sands National Monument </p>
+      <div class="column widthM">
+        <p class="t-title-l">White Sands National Monument</p>
         <p class="horizontal-line"></p>
         <p class="t-text-m">December, 2019</p>
         <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
@@ -391,39 +350,34 @@ Interested in what you see? Shoot me an email :) " />
 
   <!--Photo 12-->
 
-  <div class="body-h" id="ytrigger-pg12">
-    <div class="body-left body-txt">
-      <p class="t-title-l">White Sands National Monument</p>
-      <p class="horizontal-line"></p>
-      <p class="t-text-m">December, 2019</p>
-      <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
-    </div>
+  <div id="ytrigger-pg12">
 
-    <div class="vertical-line-blank">
-    </div>
-    <div class="body-right body-img float">
-      <img class="shadowAll" src="./12.jpg">
+    <div class="row-change marginAll center-h center-v row-changeRV">
 
+      <div class="column widthM">
+        <p class="t-title-l">White Sands National Monument</p>
+        <p class="horizontal-line"></p>
+        <p class="t-text-m">December, 2019</p>
+        <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
+      </div>
+      <div class="vertical-line-blank">
+      </div>
+      <img class="float shadowAll" src="./12.jpg">
     </div>
   </div>
 
   <!--Photo 12-->
-
-
 
   <div class="blankHXL"></div>
 
   <!--Photo 13-->
   <div id="ytrigger-pg13">
 
-    <div class="body-h">
-      <div class="body-left body-img float">
-        <img class="shadowAll" src="./13.jpg">
-
-      </div>
+    <div class="row-change marginAll center-h center-v">
+      <img class="float shadowAll" src="./13.jpg">
       <div class="vertical-line-blank">
       </div>
-      <div class="body-right body-txt">
+      <div class="column widthM">
         <p class="t-title-l">White Sands National Monument</p>
         <p class="horizontal-line"></p>
         <p class="t-text-m">December, 2019</p>
@@ -437,22 +391,17 @@ Interested in what you see? Shoot me an email :) " />
   <!--Photo 14-->
   <div id="ytrigger-pg14">
 
-    <div class="body-h">
+    <div class="row-change marginAll center-h center-v row-changeRV">
 
-      <div class="body-left body-txt">
+      <div class="column widthM">
         <p class="t-title-l">White Sands National Monument</p>
         <p class="horizontal-line"></p>
         <p class="t-text-m">December, 2019</p>
         <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
-
       </div>
-
       <div class="vertical-line-blank">
       </div>
-      <div class="body-right body-img float">
-        <img class="shadowAll" src="./14.jpg">
-
-      </div>
+      <img class="float shadowAll" src="./14.jpg">
     </div>
   </div>
   <!--Photo 14-->
@@ -461,15 +410,11 @@ Interested in what you see? Shoot me an email :) " />
 
   <!--Photo 15-->
   <div id="ytrigger-pg15">
-
-    <div class="body-h">
-      <div class="body-left body-img float">
-        <img class="shadowAll"src="./15.jpg">
-
-      </div>
+    <div class="row-change marginAll center-h center-v">
+      <img class="float shadowAll" src="./15.jpg">
       <div class="vertical-line-blank">
       </div>
-      <div class="body-right body-txt">
+      <div class="column widthM">
         <p class="t-title-l">Yellowstone National Park</p>
         <p class="horizontal-line"></p>
         <p class="t-text-m">September, 2020 </p>
@@ -483,21 +428,17 @@ Interested in what you see? Shoot me an email :) " />
   <!--Photo 16-->
   <div id="ytrigger-pg16">
 
-    <div class="body-h">
+    <div class="row-change marginAll center-h center-v row-changeRV">
 
-      <div class="body-left body-txt">
+      <div class="column widthM">
         <p class="t-title-l">Taos Pueblo Indian Reservation</p>
         <p class="horizontal-line"></p>
         <p class="t-text-m">December, 2019</p>
         <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
-
       <div class="vertical-line-blank">
       </div>
-      <div class="body-right body-img float">
-        <img class="shadowAll" src="./16.jpg">
-
-      </div>
+      <img class="float shadowAll" src="./16.jpg">
     </div>
   </div>
   <!--Photo 16-->
@@ -507,15 +448,11 @@ Interested in what you see? Shoot me an email :) " />
 
   <!--Photo 17-->
   <div id="ytrigger-pg17">
-
-    <div class="body-h">
-      <div class="body-left body-img float">
-        <img class="shadowAll" src="./17.jpg">
-
-      </div>
+    <div class="row-change marginAll center-h center-v">
+      <img class="float shadowAll" src="./17.jpg">
       <div class="vertical-line-blank">
       </div>
-      <div class="body-right body-txt">
+      <div class="column widthM">
         <p class="t-title-l">Donner Lake </p>
         <p class="horizontal-line"></p>
         <p class="t-text-m">December, 2019 </p>
@@ -528,30 +465,24 @@ Interested in what you see? Shoot me an email :) " />
 
   <!--Photo 18-->
   <div id="ytrigger-pg18">
+    <div class="row-change marginAll center-h center-v row-changeRV">
 
-    <div class="body-h">
-
-      <div class="body-left body-txt">
+      <div class="column widthM">
         <p class="t-title-l">Yellowstone National Park</p>
         <p class="horizontal-line"></p>
         <p class="t-text-m">December, 2019</p>
         <p class="t-text-m">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
-
       <div class="vertical-line-blank">
       </div>
-      <div class="body-right  float">
-        <img class="shadowAll" src="./19.jpg" class="body-img-v">
-
-      </div>
+      <img class="float shadowAll" src="./19.jpg">
     </div>
   </div>
   <!--Photo 18-->
-  <div class="blankHL"></div>
 
-  <div class="blankHL"></div>
+  <div class="blankHXL"></div>
 
-  <p class="tTQ center-h" data-aos="fade-up">Thanks for your time and have a good day!  </p>
+  <p class="tTQ center-h" data-aos="fade-up">Thanks for your time and have a good day! </p>
   <p class="t-text-m center-h" data-aos="fade-up">More coming soon</p>
 
 
