--- a/project/appointment_maker/index.html
+++ b/project/appointment_maker/index.html
@@ -117,14 +117,16 @@
   <!--body-->
 
   <!--about appointmentmaker-->
+  <div class="blankPHONE"></div>
+
   <div class="bgColorAM">
     <div class="column center-v">
 
       <div class="blankHL"></div>
-      <div class="column center-v marginAllTESING tColorAM">
+      <div class="column center-v tColorAM">
         <img src="../../layout_AppointmentMaker.png" alt="Meal Planner" class="widthXXL float">
 
-        <div class="blankHM"></div>
+        <div class="blankHS"></div>
         <P class="t-title-l ">Appointment Maker</P>
         <p class="horizontalLAM"></p>
         <div class="blankHM"></div>
@@ -140,7 +142,7 @@
 
               <p class="tSL">Wireframing &bull; </p>
             </div>
-            <div class="verticalLAM"></div>
+            <div class="verLineAMWhite"></div>
 
             <div class="column align-left widthM">
               <p class="tSL">&bull; Prototyping </p>
@@ -169,7 +171,7 @@
                 <p class="tSL">Design and Research </p>
               </div>
             </div>
-            <div class="verticalLAM"></div>
+            <div class="verLineAMWhite"></div>
             <div class="align-left widthM">
               <div class="column center-v">
                 <div class="row center-h">
@@ -200,7 +202,7 @@
               </div>
             </div>
 
-            <div class="verticalLAM"></div>
+            <div class="verLineAMWhite"></div>
 
             <div class="align-left widthM">
               <div class="column center-v">
@@ -214,192 +216,377 @@
         </div>
         <div class="blankHM"></div>
 
-        <div class="column center-v">
-          <p class="t-title-s"> About:</p>
-          <div class="blankHS"></div>
+        <P class="t-title-s">About</P>
+        <div class="blankHS"></div>
 
-          <img class="iconLOGO" src="logo_google.png" alt="google">
-          <p class="tSL">Google UX Certificate Project 1</p>
+        <div class="row align-top">
+          <div class="align-right widthM">
+            <div class="column center-v ">
+              <div class="row center-h">
+                <img class="iconLOGO" src="logo_coursera.svg" alt="adobe">
+
+              </div>
+              <p class="tSL">Coursera </p>
+            </div>
+          </div>
+          <div class="verLineAMWhite"></div>
+          <div class="align-left widthM">
+            <div class="column align-left">
+              <img class="iconLOGO" src="logo_google.png" alt="adobe">
+              <p class="tSL">UX Design Certificate</p>
+              <p class="tSL">Project 1</p>
+
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
   </div>
-  <div class="blankHM"></div>
-
-
   <!--about appointmentmaker-->
-  <P class="text-project-numbers colorAP">01</P>
-  <P class="center-h t-title-l">User Research</P>
+  <div CLASS="marginAll marginAll1920 column">
+    <P class="center-h t-title-l">Design Thinking Process</P>
+    <div class="blankHL"></div>
+    <div class="row align-top center-h">
+      <div class="column center-h widthS">
+        <P class="center-v center-h designThinkingAM designThinkingAM-blue t-subtitle-l float">
+          Empathize </P>
+        <div class="blankHS"></div>
 
-  <div class="column center-v">
-    <P class="t-title-l">Personas</P>
-    <div class="row center-v">
-      <div class="widthM">
-        <P class="t-title-s align-right">Goals</P>
-      </div>
-      <div class="vertical-line"></div>
-      <div class=" column widthM">
-        <P class="t-text-s"> Personal Reminder</P>
-        <P class="t-text-s"> Conbine different task into one sheets</P>
-        <P class="t-text-s"> Manage meeting schedule</P>
-      </div>
-    </div>
 
-    <div class="row">
-      <img class="widthMM column center-v color-grey margin-s float" src="personas-01.svg"
-        alt="Appointment Maker">
-      <img class="widthMM column center-v color-grey margin-s float" src="personas-02.svg"
-        alt="Appointment Maker">
+        <div class="column align-left">
+          <ul class="row align-top">
+            <img class="icon-list" src="list.svg" alt="&bull;">
+            <li class="t-text-s"> Personas</li>
+          </ul>
+          <ul class="row align-top">
+            <img class="icon-list" src="list.svg" alt="&bull;">
+            <li class="t-text-s"> User Journey Map</li>
+          </ul>
+
+        </div>
+      </div>
+
+
+      <div class="column center-v widthS">
+        <P class="center-v center-h designThinkingAM designThinkingAM-blue t-subtitle-l float">
+          Define </P>
+        <div class="blankHS"></div>
+
+        <div class="column align-left">
+
+
+
+
+          <ul class="row align-top">
+            <img class="icon-list" src="list.svg" alt="&bull;">
+            <li class="t-text-s"> Defining user problems </li>
+          </ul>
+
+          <ul class="row align-top">
+            <img class="icon-list" src="list.svg" alt="&bull;">
+            <li class="t-text-s"> Competitive Audit </li>
+          </ul>
+
+          <ul class="row align-top">
+            <img class="icon-list" src="list.svg" alt="&bull;">
+            <li class="t-text-s"> Brainstorm ideas
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="column center-v widthS">
+        <P class="center-v center-h designThinkingAM designThinkingAM-blue  t-subtitle-l float">
+          Ideate </P>
+        <div class="blankHS"></div>
+
+
+
+        <div class="column align-left">
+          <ul class="row align-top">
+            <img class="icon-list" src="list.svg" alt="&bull;">
+            <li class="t-text-s"> Storyboards</li>
+          </ul>
+          <ul class="row align-top">
+            <img class="icon-list" src="list.svg" alt="&bull;">
+            <li class="t-text-s"> wireframes</li>
+          </ul>
+          <ul class="row align-top">
+            <img class="icon-list" src="list.svg" alt="&bull;">
+            <li class="t-text-s"> Information Architecture </li>
+          </ul>
+          <ul class="row align-top">
+            <img class="icon-list" src="list.svg" alt="&bull;">
+            <li class="t-text-s"> Prototypes </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="column center-v widthS">
+        <P class="center-v center-h designThinkingAM designThinkingAM-blue  t-subtitle-l float">
+          Design
+        </P>
+        <div class="blankHS"></div>
+
+        <div class="column align-left">
+
+          <ul class="row align-top">
+            <img class="icon-list" src="list.svg" alt="&bull;">
+            <li class="t-text-s"> Branding</li>
+          </ul>
+          <ul class="row align-top">
+            <img class="icon-list" src="list.svg" alt="&bull;">
+            <li class="t-text-s"> Wireframes</li>
+          </ul>
+          <ul class="row align-top">
+            <img class="icon-list" src="list.svg" alt="&bull;">
+            <li class="t-text-s"> Prototypes </li>
+          </ul>
+          <ul class="row align-top">
+            <img class="icon-list" src="list.svg" alt="&bull;">
+            <li class="t-text-s"> Visal Design </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="column center-v widthS">
+        <P class="center-v center-h designThinkingAM designThinkingAM-blue  t-subtitle-l float">
+          Testing </P>
+        <div class="blankHS"></div>
+
+        <div class="column align-left">
+
+          <ul class="row center-v">
+            <img class="icon-list" src="list.svg" alt="&bull;">
+            <li class="t-text-s"> Usability Testing</li>
+          </ul>
+        </div>
+      </div>
+
+
+
+
     </div>
   </div>
 
-  <div class="blankHXL"></div>
 
 
-  <div class="column center-v marginAllTESING">
-    <div class="column center-v">
-      <P class="t-title-l">User Journey Map</P>
+  <P class="text-project-numbers colorAP">01</P>
+  <P class="center-h t-title-l">Empathize</P>
+  <div class="blankHM"></div>
+  <!--step progress bar testing-->
+
+  <div class="stepper-wrapper marginAll marginAll1920">
+    <div class="stepper-item completed active">
+      <div class="step-counter"></div>
+      <div class="step-name">Empathize</div>
+    </div>
+    <div class="stepper-item">
+      <div class="step-counter"></div>
+      <div class="step-name">Define</div>
+    </div>
+    <div class="stepper-item">
+      <div class="step-counter"></div>
+      <div class="step-name">Ideate</div>
+    </div>
+    <div class="stepper-item">
+      <div class="step-counter"></div>
+      <div class="step-name">Prototype & Design</div>
+    </div>
+    <div class="stepper-item">
+      <div class="step-counter"></div>
+      <div class="step-name">Testing</div>
+    </div>
+  </div>
+
+
+  <!--step progress bar testing-->
+  <div class="blankHL"></div>
+
+
+
+
+  <div class="bgGrey">
+    <div class="column center-v marginAll marginAll1920">
+
+      <div class="blankHM"></div>
+
+      <P class="t-title-m">Personas</P>
       <div class="row center-v">
         <div class="widthM">
-          <P class="t-title-s align-right">Steps</P>
+          <P class="t-title-s align-right">Goals</P>
         </div>
-        <div class="vertical-line"></div>
+        <div class="verLineAM"></div>
         <div class=" column widthM">
-          <P class="t-text-s"> Insert a goal</P>
-          <P class="t-text-s"> Select persona </P>
-          <P class="t-text-s"> Identify a business goal</P>
-          <P class="t-text-s"> Identify actions your persona takes </P>
-          <P class="t-text-s"> Identify tasks for each action </P>
-          <P class="t-text-s"> Identify how the persona feels at each point </P>
-          <P class="t-text-s"> Identify opportunities for improvement </P>
-          <P class="t-text-s"> Proactively consider accessibility and check for bias in your
-            assumptions and ideas </P>
+          <P class="t-text-s"> Personal Reminder</P>
+          <P class="t-text-s"> Conbine different task into one sheets</P>
+          <P class="t-text-s"> Manage meeting schedule</P>
+        </div>
+      </div>
 
+      <img class="color-grey float " src="personas-01.svg" alt="Appointment Maker">
+      <div class="blankHM"></div>
+
+      <img class="color-grey float " src="personas-02.svg" alt="Appointment Maker">
+
+      <div class="blankHL"></div>
+
+    </div>
+
+  </div>
+
+  <div class="blankHL"></div>
+
+
+  <div class="marginAll1920">
+    <div class="column center-v marginAll ">
+      <div class="column center-v">
+        <P class="t-title-m">User Journey Map</P>
+        <div class="row center-v">
+          <div class="widthM">
+            <P class="t-title-s align-right">Steps</P>
+          </div>
+          <div class="vertical-line"></div>
+          <div class=" columnNon widthM">
+            <P class="t-text-s"> Insert a goal</P>
+            <P class="t-text-s"> Select persona </P>
+            <P class="t-text-s"> Identify a business goal</P>
+            <P class="t-text-s"> Identify actions your persona takes </P>
+            <P class="t-text-s"> Identify tasks for each action </P>
+            <P class="t-text-s"> Identify how the persona feels at each point </P>
+            <P class="t-text-s"> Identify opportunities for improvement </P>
+            <P class="t-text-s"> Proactively consider accessibility and check for bias in your
+              assumptions and ideas </P>
+
+          </div>
         </div>
       </div>
     </div>
+
+    <div class="center-v marginAll ">
+
+      <table>
+        <tr>
+          <th>ACTION</th>
+          <td class="t-title-s">determine meeting types at work</td>
+          <td class="t-title-s">categorized meetings </td>
+          <td class="t-title-s">find the overlapped meeting slot</td>
+          <td class="t-title-s">move meetings to available slot </td>
+          <td class="t-title-s">Save and exit </td>
+        </tr>
+
+        <tr>
+          <th>TASK LIST</th>
+          <td>
+            <div class="column">
+              <p>A. open meeting sheets</p>
+              <p>B. merge sheets </p>
+            </div>
+          </td>
+          <td>
+            <div class="column">
+              <p>A. mark them in different colors based on type</p>
+              <p>B. check the meeting types
+              </p>
+            </div>
+          </td>
+          <td>
+            <div class="column">
+              <p>A. mark them </p>
+              <p>B. prepare to move</p>
+            </div>
+          </td>
+          <td>
+            <div class="column">
+              <p>A. find available slot </p>
+              <p>B. adjust meeting slot </p>
+            </div>
+          </td>
+          <td>
+            <div class="column">
+              <p>A. save it </p>
+              <p>B. find exit </p>
+            </div>
+          </td>
+        </tr>
+
+        <tr>
+          <th> FEELING ADJECTIVE</th>
+          <td>
+            <div class="column">
+              <p> &middot; Confused </p>
+              <p> &middot; Overwhelmed </p>
+            </div>
+          </td>
+          <td>
+            <div class="column">
+              <p> &middot; Intimidate</p>
+              <p> &middot; Lost </p>
+
+            </div>
+          </td>
+          <td>
+            <div class="column">
+              <p> &middot; Overwhelmed </p>
+              <p> &middot; Excluded </p>
+            </div>
+          </td>
+          <td>
+            <div class="column">
+              <p> &middot; Glad </p>
+              <p> &middot; Relieved </p>
+            </div>
+          </td>
+          <td>
+            <div class="column">
+              <p> &middot; Excited </p>
+              <p> &middot; Confused </p>
+            </div>
+          </td>
+        </tr>
+
+        <tr>
+          <th>IMPROVEMENT OPPORTUNITIES</th>
+          <td>
+            <div class="column">
+              <p> &middot; better way find all meeting schedule
+              </p>
+            </div>
+          </td>
+          <td>
+            <div class="column">
+              <p> &middot; A app including all meeting schedule
+              </p>
+            </div>
+          </td>
+          <td>
+            <div class="column">
+              <p> &middot; Realtime update meeting schedule</p>
+            </div>
+          </td>
+          <td>
+            <div class="column">
+              <p> &middot; Adjust meeting schedule easily </p>
+              <p> &middot; Not allow meeting overlaps </p>
+            </div>
+          </td>
+          <td>
+            <div class="column">
+              <p> &middot; Auto save </p>
+              <p> &middot; Meeting Alert
+              </p>
+            </div>
+          </td>
+        </tr>
+
+
+      </table>
+
+    </div>
+
   </div>
 
-  <div class="center-v marginAllTESING">
-
-    <table>
-      <tr>
-        <th>ACTION</th>
-        <td class="t-title-s">determine meeting types at work</td>
-        <td class="t-title-s">categorized meetings </td>
-        <td class="t-title-s">find the overlapped meeting slot</td>
-        <td class="t-title-s">move meetings to available slot </td>
-        <td class="t-title-s">Save and exit </td>
-      </tr>
-
-      <tr>
-        <th>TASK LIST</th>
-        <td>
-          <div class="column">
-            <p>A. open meeting sheets</p>
-            <p>B. merge sheets </p>
-          </div>
-        </td>
-        <td>
-          <div class="column">
-            <p>A. mark them in different colors based on type</p>
-            <p>B. check the meeting types
-            </p>
-          </div>
-        </td>
-        <td>
-          <div class="column">
-            <p>A. mark them </p>
-            <p>B. prepare to move</p>
-          </div>
-        </td>
-        <td>
-          <div class="column">
-            <p>A. find available slot </p>
-            <p>B. adjust meeting slot </p>
-          </div>
-        </td>
-        <td>
-          <div class="column">
-            <p>A. save it </p>
-            <p>B. find exit </p>
-          </div>
-        </td>
-      </tr>
-
-      <tr>
-        <th> FEELING ADJECTIVE</th>
-        <td>
-          <div class="column">
-            <p> &middot; Confused </p>
-            <p> &middot; Overwhelmed </p>
-          </div>
-        </td>
-        <td>
-          <div class="column">
-            <p> &middot; Intimidate</p>
-            <p> &middot; Lost </p>
-
-          </div>
-        </td>
-        <td>
-          <div class="column">
-            <p> &middot; Overwhelmed </p>
-            <p> &middot; Excluded </p>
-          </div>
-        </td>
-        <td>
-          <div class="column">
-            <p> &middot; Glad </p>
-            <p> &middot; Relieved </p>
-          </div>
-        </td>
-        <td>
-          <div class="column">
-            <p> &middot; Excited </p>
-            <p> &middot; Confused </p>
-          </div>
-        </td>
-      </tr>
-
-      <tr>
-        <th>IMPROVEMENT OPPORTUNITIES</th>
-        <td>
-          <div class="column">
-            <p> &middot; better way find all meeting schedule
-            </p>
-          </div>
-        </td>
-        <td>
-          <div class="column">
-            <p> &middot; A app including all meeting schedule
-            </p>
-          </div>
-        </td>
-        <td>
-          <div class="column">
-            <p> &middot; Realtime update meeting schedule</p>
-          </div>
-        </td>
-        <td>
-          <div class="column">
-            <p> &middot; Adjust meeting schedule easily </p>
-            <p> &middot; Not allow meeting overlaps </p>
-          </div>
-        </td>
-        <td>
-          <div class="column">
-            <p> &middot; Auto save </p>
-            <p> &middot; Meeting Alert
-            </p>
-          </div>
-        </td>
-      </tr>
-
-
-    </table>
-
-  </div>
   <div class="bgColorAMRV">
     <div class="blankHXL"></div>
     <div class="blankHXL"></div>
