--- a/project/meal_planner/index.html
+++ b/project/meal_planner/index.html
@@ -117,7 +117,7 @@
   <!--about mealplanner-->
   <div class="body-h bg-color-mp" id="bg-color-triggerMP">
     <div class="body-left float">
-      <img src="../../layout_mealplanner.png" alt="Meal Planner" class="">
+      <img src="../../layout_MealPlanner.png" alt="Meal Planner" class="">
     </div>
     <div class="body-right body-txt width-xl">
       <P class="t-title-l">MEAL PLANNER</P>
